# chess_engine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  debug_logger.py  magic_numbers.txt  notes.txt  protocol_log.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: board.rs  chess_engine.rs  fen_parser.rs  lib.rs  main.rs  move_generation.rs  notes.txt  perf.rs  perft.rs  uci.rs
src/board_representation/: bitboard.rs  board.rs  castle_rights.rs  computed_boards.rs  const.rs  fen_parser.rs  game_state.rs  magic_tables.rs  make_move.rs  masks.rs  mod.rs  move.rs  move_generation.rs  piece.rs  position.rs  utils.rs  zobrist.rs
src/chess_engine/: bitboard.rs  board.rs  castle_rights.rs  computed_boards.rs  const.rs  engine.rs  fen_parser.rs  game_state.rs  magic_tables.rs  make_move.rs  masks.rs  mod.rs  move.rs  move_generation.rs  moves.rs  piece.rs  position.rs  utils.rs  zobrist.rs
src/chess_engine/engine/: evaluation.rs  mod.rs  search.rs  transposition.rs
tests/: perf_tests.rs  perft_tests.rs  wac.rs
utils/: debug_logger.py  extract_wac.py
