[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10"
rand_pcg = "0.10"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
# Enable in future 
# print_stdout = "deny"
# print_stderr = "deny"

# Maximally-optimized release build, used by the CI perft-timing job.
[profile.release]
lto = "fat"
codegen-units = 1