[package]
name = "chess_engine"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10"
rand_pcg = "0.10"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Maximally-optimized release build, used by the CI perft-timing job.
[profile.release]
lto = "fat"
codegen-units = 1

# Optimize test builds so the perft and WAC suites run at release-like speed
# without needing `cargo test --release`.
[profile.test]
opt-level = 3