[package]
name = "sabertooth"
version = "0.2.0-alpha"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/samuelburger27/chess_engine"
description = "SaberTooth — a UCI chess engine written in Rust."
authors = ["Samuel Burger"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10"
rand_pcg = "0.10"

[lints.rust]
warnings = "deny"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }

# Maximally-optimized release build, used by the CI perft-timing job.
[profile.release]
lto = "fat"
codegen-units = 1

# Optimize test builds so the perft and WAC suites run at release-like speed
# without needing `cargo test --release`.
[profile.test]
opt-level = 3